# vst3

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
cmd/: build  install
src/: CMakeLists.txt
src/ADHDSimulator/: ADHDSimulator.cpp  ADHDSimulator.h  ADHDSimulator.h.in  ADHDSimulatorEditor.cpp  ADHDSimulatorEditor.h  ADHDSimulatorProcessor.cpp  ADHDSimulatorProcessor.h  CMakeLists.txt
src/Dsp/: CMakeLists.txt  Convolve.cpp  Convolve.hpp
